tests/webpack-cli-test/build/config/error-mjs/webpack.config.mjs
export default {
  name: "config-error",
  mode: "unknown", //error
  target: "node",
};
